# BindingType

./: LICENSE  README.md  setup.cfg
data/: AdenosinePMID.tsv
data/preprocessingFiles/: Chembl22_id2accession.tsv  Chembl22_protein_classification.tsv
src/bindtype/: ClassA_GPCR_hierarchical_keywords.json  Kinase_allosteric_keywords.json  annotation.py  cli.py  data.py  descriptors.py  papyrus.py  predict.py  test_data_AR.csv  tests.py
src/bindtype/data/: BindingTypeDataset_ClassAGPCRs.tsv
src/gpcrBT/: __init__.py  annotation.py  model.py
src/gpcrBT/models/: proteinDesciptorScaler.json
