[metadata]
name = gpcrBT
version = 1.0.0
description = A package to annotate and predict GPCR binding types
long_description = file: README.md
long_description_content_type = text/markdown

url = https://github.com/OlivierBeq/ProDEC

author = Sohvi Luukkonen
author_email = sohvi.luukkonen@hotmail.com
maintainer = Sohvi Luukkonen
maintainer_email = sohvi.luukkonen@hotmail.com

license = MIT
license_file = LICENSE

classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.6

keywords =
    GPCR
    binding type annotation
    binding type prediction

[options]
include_package_data = True
packages = find:
package_dir = 
    = src
install_requires =
    orjson
    numpy
    psutil
    pandas

[options.packages.find]
where = src

[options.package_data]
gpcrBT = 
    *.tsv
    *.tsv.gz
